--- a/main.ipynb
+++ b/main.ipynb
@@ -143,11 +143,11 @@
        "<table><tr><th>n.person</th></tr><tr><td style=\"text-align:right\">null</td></tr><tr><td style=\"text-align:right\">null</td></tr><tr><td style=\"text-align:right\">null</td></tr></table>"
       ],
       "text/plain": [
-       " n.person \n",
+       " n.name \n",
        "----------\n",
-       "     null \n",
-       "     null \n",
-       "     null "
+       "     name \n",
+       "     name \n",
+       "     name "
       ]
      },
      "execution_count": 5,
