--- a/main.ipynb
+++ b/main.ipynb
@@ -140,14 +140,14 @@
     {
      "data": {
       "text/html": [
-       "<table><tr><th>n.person</th></tr><tr><td style=\"text-align:right\">null</td></tr><tr><td style=\"text-align:right\">null</td></tr><tr><td style=\"text-align:right\">null</td></tr></table>"
+       "<table><tr><th>n.name</th></tr><tr><td style=\"text-align:left\">Галчевская Карина Владимировна</td></tr><tr><td style=\"text-align:left\">Белоновская Анастасия Семеновна</td></tr><tr><td style=\"text-align:left\">Офицеров Олег Романович</td></tr></table>"
       ],
       "text/plain": [
-       " n.name \n",
-       "----------\n",
-       "     name \n",
-       "     name \n",
-       "     name "
+       " n.name                          \n",
+       "---------------------------------\n",
+       " Галчевская Карина Владимировна  \n",
+       " Белоновская Анастасия Семеновна \n",
+       " Офицеров Олег Романович         "
       ]
      },
      "execution_count": 5,
@@ -156,7 +156,7 @@
     }
    ],
    "source": [
-    "graph.run('MATCH (n:Person) RETURN n.person LIMIT 250') # Вывод списка имен"
+    "graph.run('MATCH (n:Person) RETURN n.name LIMIT 250') # Вывод списка имен"
    ]
   },
   {
